@@ -79,6 +79,7 @@ module java.base {
     exports java.io;
     exports java.lang;
     exports java.lang.annotation;
+    exports java.lang.constant;
     exports java.lang.invoke;
     exports java.lang.module;
     exports java.lang.ref;
@@ -134,6 +135,18 @@ module java.base {
 
     exports com.sun.security.ntlm to
         java.security.sasl;
+    exports jdk.internal to
+        jdk.jfr;
+    exports jdk.internal.access to
+        java.desktop,
+        java.logging,
+        java.management,
+        java.naming,
+        java.rmi,
+        jdk.jlink,
+        jdk.net;
+    exports jdk.internal.event to
+        jdk.jfr;
     exports jdk.internal.jimage to
         jdk.jlink;
     exports jdk.internal.jimage.decompressor to
@@ -148,36 +161,38 @@ module java.base {
         java.logging;
     exports jdk.internal.org.objectweb.asm to
         jdk.jartool,
+        jdk.jfr,
         jdk.jlink,
-        jdk.scripting.nashorn,
-        jdk.internal.vm.ci;
+        jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.tree to
+        jdk.jfr,
         jdk.jlink;
     exports jdk.internal.org.objectweb.asm.util to
+        jdk.jfr,
         jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.commons to
+        jdk.jfr,
         jdk.scripting.nashorn;
     exports jdk.internal.org.objectweb.asm.signature to
         jdk.scripting.nashorn;
-    exports jdk.internal.math to
-        java.desktop;
+    exports jdk.internal.org.xml.sax to
+        jdk.jfr;
+    exports jdk.internal.org.xml.sax.helpers to
+        jdk.jfr;
     exports jdk.internal.misc to
         java.desktop,
         java.logging,
         java.management,
         java.naming,
+        java.net.http,
         java.rmi,
         java.security.jgss,
-        java.sql,
         java.xml,
         jdk.attach,
         jdk.charsets,
         jdk.compiler,
-        jdk.incubator.httpclient,
-        jdk.jdeps,
-        jdk.jlink,
+        jdk.jfr,
         jdk.jshell,
-        jdk.net,
         jdk.scripting.nashorn,
         jdk.scripting.nashorn.shell,
         jdk.unsupported,
@@ -186,15 +201,14 @@ module java.base {
         java.instrument,
         java.management.rmi,
         jdk.jartool,
+        jdk.jfr,
         jdk.jlink;
     exports jdk.internal.perf to
-        java.desktop,
         java.management,
         jdk.management.agent,
         jdk.internal.jvmstat;
     exports jdk.internal.ref to
-        java.desktop,
-        jdk.unsupported;
+        java.desktop;
     exports jdk.internal.reflect to
         java.logging,
         java.sql,
@@ -203,16 +217,19 @@ module java.base {
         jdk.scripting.nashorn,
         jdk.unsupported;
     exports jdk.internal.vm to
-        jdk.management.agent,
-        jdk.internal.jvmstat;
+        jdk.internal.jvmstat,
+        jdk.management.agent;
     exports jdk.internal.vm.annotation to
-        jdk.unsupported,
         jdk.internal.vm.ci,
-        jdk.incubator.httpclient;
+        jdk.unsupported;
     exports jdk.internal.util.jar to
         jdk.jartool;
+    exports jdk.internal.util.xml to
+        jdk.jfr;
+    exports jdk.internal.util.xml.impl to
+        jdk.jfr;
     exports sun.net to
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.naming.dns;
     exports sun.net.ext to
         jdk.net;
@@ -222,23 +239,19 @@ module java.base {
     exports sun.net.util to
         java.desktop,
         jdk.jconsole,
-        jdk.incubator.httpclient;
+        java.net.http;
     exports sun.net.www to
-        java.desktop,
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.jartool;
     exports sun.net.www.protocol.http to
         java.security.jgss;
     exports sun.nio.ch to
         java.management,
         jdk.crypto.cryptoki,
-        jdk.sctp,
-        jdk.unsupported;
+        jdk.net,
+        jdk.sctp;
     exports sun.nio.cs to
-        java.desktop,
         jdk.charsets;
-    exports sun.nio.fs to
-        jdk.unsupported;
     exports sun.reflect.annotation to
         jdk.compiler;
     exports sun.reflect.generics.reflectiveObjects to
@@ -249,8 +262,7 @@ module java.base {
         java.management,
         java.management.rmi,
         java.rmi,
-        java.sql.rowset,
-        java.xml;
+        java.sql.rowset;
     exports sun.security.action to
         java.desktop,
         java.security.jgss;
@@ -275,8 +287,6 @@ module java.base {
         java.naming;
     exports sun.security.rsa to
         jdk.crypto.cryptoki;
-    exports sun.security.ssl to
-        java.security.jgss;
     exports sun.security.timestamp to
         jdk.jartool;
     exports sun.security.tools to
@@ -294,15 +304,16 @@ module java.base {
         jdk.jartool,
         jdk.security.auth,
         jdk.security.jgss;
+    exports sun.security.util.math to
+        jdk.crypto.ec;
+    exports sun.security.util.math.intpoly to
+        jdk.crypto.ec;
     exports sun.security.x509 to
         jdk.crypto.ec,
         jdk.crypto.cryptoki,
-        jdk.jartool,
-        jdk.security.auth;
+        jdk.jartool;
     exports sun.security.validator to
         jdk.jartool;
-    exports sun.text.resources to
-        jdk.localedata;
     exports sun.util.cldr to
         jdk.jlink;
     exports sun.util.locale.provider to
@@ -350,7 +361,6 @@ module java.base {
     // JDK-internal service types
 
     uses jdk.internal.logger.DefaultLoggerFinder;
-    uses sun.security.ssl.ClientKeyExchangeService;
     uses sun.text.spi.JavaTimeDateTimePatternProvider;
     uses sun.util.spi.CalendarProvider;
     uses sun.util.locale.provider.LocaleDataMetaInfo;
