@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,6 +20,8 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+
+
 package org.graalvm.compiler.core.test;
 
 import java.lang.invoke.MethodHandle;
@@ -96,8 +98,8 @@ public final class InterfaceMethodHandleTest extends GraalCompilerTest {
     }
 
     @Test
-    public void testInvokeInterface02() throws InstantiationException, IllegalAccessException, ClassNotFoundException {
-        test("invokeInterfaceHandle", loader.findClass(NAME).newInstance());
+    public void testInvokeInterface02() throws Exception {
+        test("invokeInterfaceHandle", loader.findClass(NAME).getDeclaredConstructor().newInstance());
     }
 
     public static Object invokeInterfaceHandle2(I o, int a, int b, int c, int d, int e, int f, int g, int h, int i, int j) throws Throwable {
