@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,6 +20,8 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+
+
 package org.graalvm.compiler.hotspot.amd64.test;
 
 import static org.graalvm.compiler.core.common.GraalOptions.OptImplicitNullChecks;
@@ -74,7 +76,7 @@ public class CompressedNullCheckTest extends HotSpotGraalCompilerTest {
 
     @Test
     public void implicit() {
-        testImplicit(new Integer(1));
+        testImplicit(Integer.valueOf(1));
     }
 
     @Test
@@ -84,7 +86,7 @@ public class CompressedNullCheckTest extends HotSpotGraalCompilerTest {
 
     @Test
     public void explicit() {
-        testExplicit(new Integer(1));
+        testExplicit(Integer.valueOf(1));
     }
 
     @Test
