@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,24 @@
  * questions.
  */
 
-import java.util.*;
+/*
+ * @test
+ * @bug 8000983 8008577
+ * @summary Unit test for narrow names support. This test is locale data-dependent
+ *          and assumes that both JRE and CLDR have the same narrow names.
+ * @modules jdk.localedata
+ * @comment Locale providers: JRE,SPI
+ * @run main/othervm -Djava.locale.providers=JRE,SPI NarrowNamesTest JRE,SPI
+ * @comment Locale providers: CLDR
+ * @run main/othervm -Djava.locale.providers=CLDR NarrowNamesTest CLDR
+ */
+
+import java.time.LocalDateTime;
+import java.util.Calendar;
+import java.util.Comparator;
+import java.util.Locale;
+import java.util.Map;
+import java.util.TreeMap;
 import static java.util.GregorianCalendar.*;
 
 public class NarrowNamesTest {
@@ -49,7 +66,9 @@ public class NarrowNamesTest {
              HOUR_OF_DAY, 10);
         test(US, AM_PM, "p",
              HOUR_OF_DAY, 23);
-        test(JAJPJP, DAY_OF_WEEK, "\u65e5",
+        test(JAJPJP, DAY_OF_WEEK,
+             LocalDateTime.now().isBefore(LocalDateTime.of(2019, 5, 1, 0, 0)) ?
+                "\u65e5" : "\u706b", // "Sun" for HEISEI, "Tue" for NEWERA
              YEAR, 24, MONTH, DECEMBER, DAY_OF_MONTH, 23);
         test(THTH, MONTH, NARROW_STANDALONE, "\u0e18.\u0e04.",
              YEAR, 2555, MONTH, DECEMBER, DAY_OF_MONTH, 5);
